terraform/rds.tf
resource "aws_db_subnet_group" "shopping_db_subnet" {
  name       = "shopping-db-subnet-group"
  subnet_ids = [aws_subnet.public_subnet.id, aws_subnet.private_subnet.id]

  tags = {
    Name = "shopping-db-subnet-group"
  }
}

resource "aws_db_instance" "shopping_db" {
  identifier             = "shopping-db"
  engine                 = "postgres"
  engine_version         = "15.4"
  instance_class         = "db.t4g.micro"
  allocated_storage      = 20
  db_name                = var.db_name
  username               = var.db_username
  password               = var.db_password
  db_subnet_group_name   = aws_db_subnet_group.shopping_db_subnet.name
  vpc_security_group_ids = [aws_security_group.rds_sg.id]
  skip_final_snapshot    = true
  publicly_accessible    = false

  tags = {
    Name = "shopping-db"
  }
}
